creating package.json files

--- a/MatrixLED/package.json
+++ b/MatrixLED/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "led-matrix-controller",
-  "version": "0.0.1",
-  "description": "Testing node, web sockets, johnny-five, arduino",
-  "main": "led-matrix-controller.js",
-  "dependencies": {
-    "socket.io": "readline",
-    "johnny-five": "latest"
-  },
-  "devDependencies": {},
+  "name": "motionsensor",
+  "version": "1.0.0",
+  "description": "",
+  "main": "motionalarm.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "MIT"
+  "license": "ISC",
+  "dependencies": {
+    "j5-songs": "latest",
+    "johnny-five": "latest",
+    "readline": "latest"
+  }
 }
