--- a/MatrixLED/package.json
+++ b/MatrixLED/package.json
@@ -2,7 +2,7 @@
   "name": "motionsensor",
   "version": "1.0.0",
   "description": "",
-  "main": "motionalarm.js",
+  "main": "led-matrix.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
